--- a/Bear Bears.html
+++ b/Bear Bears.html
@@ -120,8 +120,7 @@
             <div>
                 <div>
                     <img src="#"alt="lule"width="10"height="10"loading="lazy"/>
-                    <span>test@gmail.com</span>
-                </div>
+                    <a href="mailto:test@gmail.com>test@gmail.com</a>
                 <div>
                     <img src="#"alt="lule"width="10"height="10"loading="lazy"/>
                     <span>(303)987654321</span>
@@ -134,4 +133,5 @@
         </div>
     </footer>
 </body>
+
 </html>
