--- a/RecycleBin.html
+++ b/RecycleBin.html
@@ -6,11 +6,11 @@
   <title>Projekt2</title>
 </head>
 <body>
-<section>
-<div display="inline-block"><img src="...."/></div>
+  <!--header-->
 <header>
-<div display="inline-block">
-<img src="  "/>
+<span>
+  <svg></svg>
+</span>
 <div>
 <h4>ROUND ROCK</h4>
 <small>Trush Hauling</small>
@@ -18,21 +18,21 @@
 </header>
 <br><br><br>
 <div>
-<input type="submit"value="EXPERTS"/><br>
+<button type="button"name="EXPERTS"></button><br>
 <strong>Lorem</strong><br>
-<h1>Lorem lorem</h1><br>
+<h1>Lorem lorem</h1>
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry`s standard dummy text ever since the</P>
 <button type="button">help me</button>
 </div>
-</section>
-<br><br><br>
+</header>
+  <!--main-->
 <section>
 <div display="inline-block">
 <span>Abaut Us</span>
 <p>......</p>
-<img src="...."/>
+<img src="#"ait="#"width="#"height="#"louding="lazy"/>
 </div>
-<div display="inline-block">
+<div>
 <span>Where</span>
 <p>......</p>
 </div>
@@ -41,18 +41,18 @@
 <section>
 <h2>SERVICES></h2>
 <div>
-<div display="inline-block">
-<img src="  "/>
+<div>
+<img src="#"ait="#"width="#"height="#"louding="lazy"/>
 <span>11111</span>
 <p>ppppp</p>
 </div>
-<div display="inline-block">
-<img src="  "/>
+<div>
+<img src="#"ait="#"width="#"height="#"louding="lazy"/>
 <span>11111</span>
 <p>ppppp</p>
 </div>
-<div display="inline-block">
-<img src="  "/>
+<div>
+<img src="#"ait="#"width="#"height="#"louding="lazy"/>
 <span>11111</span>
 <p>ppppp</p>
 </div>
@@ -62,55 +62,57 @@
 <section>
 <h2>Testymonials</h2>
 <div>
-<div display="inline-block">
 <div>
-<div display="inline-block"><img src="  "/></div>
+<div>
+<div><img src="#"ait="#"width="#"height="#"louding="lazy"/></div>
+<div>
+<span>Courtney Henry</span>
+<p>lllllll</p>
+<img src="#"ait="#"width="#"height="#"louding="lazy"/></div>          
+</div>
+<div>
+<div><img src="#"ait="#"width="#"height="#"louding="lazy"/></div>
+<div>
+<span>Courtney Henry</span>
+<p>lllllll</p>
+<img src="#"ait="#"width="#"height="#"louding="lazy"/></div>          
+</div>
+</div>
+<div>
+<div>
+<div><img src="#"ait="#"width="#"height="#"louding="lazy"/></div>
 <div display="inline-block">
 <span>Courtney Henry</span>
 <p>lllllll</p>
-<img src="......"/></div>          
+<img src="#"ait="#"width="#"height="#"louding="lazy"/></div>          
 </div>
 <div>
-<div display="inline-block"><img src="  "/></div>
-<div display="inline-block">
-<span>Courtney Henry</span>
-<p>lllllll</p>
-<img src="......"/></div>          
-</div>
-</div>
-<div display="inline-block">
+<div><img src="#"ait="#"width="#"height="#"louding="lazy"/></div>
 <div>
-<div display="inline-block"><img src="  "/></div>
-<div display="inline-block">
 <span>Courtney Henry</span>
 <p>lllllll</p>
-<img src="......"/></div>          
-</div>
-<div>
-<div display="inline-block"><img src="  "/></div>
-<div display="inline-block">
-<span>Courtney Henry</span>
-<p>lllllll</p>
-<img src="......"/></div>          
+<img src="#"ait="#"width="#"height="#"louding="lazy"/></div>          
 </div>
 </div>
 </div>
 </section>
+  <!--footer-->
 <section>
 <h2>Contact Us</h2>
 <div>
-<div display="inline-block">
+<div>
 <input type="text"/><br>
 <input type="text"/><br>
 <input type="text"/><br>
 <button type="text"></button>
 </div>
-<div display="inline-block">
-<img src=" "/><a href="mailto:example@site.com.com">test@mail.com</a><br>
-<img src=" "/><a href="tel:+999">+999</a>
-<img src=" "/><address>27 Ash Dr.jose</address>
+<div>
+<img src="#"ait="#"width="#"height="#"louding="lazy"/><a href="mailto:example@site.com.com">test@mail.com</a><br>
+<img src="#"ait="#"width="#"height="#"louding="lazy"/><a href="tel:+999">+999</a>
+<img src="#"ait="#"width="#"height="#"louding="lazy"/><address>27 Ash Dr.jose</address>
 </div>
 </div>
 </section>
 </body>
+
 </html>
