--- a/full e.html
+++ b/full e.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Full E Commerce Website UI UX Design</title>
-    <link rel="stylesheet" href="../assets/css/stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <!-- header -->
@@ -51,7 +51,7 @@
                     <div>Heals & Beauty</div>
                 </div>
                 <div>
-                    <img src="../assets/img/hero_endframe__cvklg0xk3w6e_large 2.svg" alt="iphone 14"/>
+                    <img src="hero_endframe__cvklg0xk3w6e_large 2.svg" alt="iphone 14"/>
                     
                 </div>
             </div>
@@ -59,4 +59,5 @@
     </main>
     
 </body>
+
 </html>
